# super_sorting_system

./: Cargo.toml  README.md
agent/: .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
agent/patches/: mineflayer+4.18.0.patch  mineflayer+4.3.0.patch  mineflayer+4.8.1.patch  prismarine-nbt+2.2.1.patch  prismarine-nbt+2.5.0.patch
agent/src/: controllerApi.ts  index.ts  types.ts  utils.ts
agent/src/operations/: craft.ts  dropItems.ts  importInventory.ts  index.ts  loadShulker.ts  moveItems.ts  scanInventory.ts  scanSigns.ts  unloadShulker.ts
gradient/: Dockerfile  Makefile  index.html  package-lock.json  package.json
gradient/public/: index.html
gradient/src/: App.tsx  index.tsx  theme.ts
gradient/src/api/: admin.ts  admin_types.ts  automation.ts  data.ts  (+6 more)
operator/: .gitignore  Cargo.toml  Dockerfile  build.rs
operator/assets/minecraft-data/: README.md  items.json
operator/src/: config.rs  data.rs  main.rs  pathfinding.rs  stats.rs  types.rs
operator/src/api/: admin_service.rs  agent_service.rs  automation_service.rs  data_service.rs  mod.rs
operator/src/services/: aborted_operation_recovery.rs  agent_expiration.rs  alert_expiration.rs  defragger.rs  hold_expiration.rs  inventory_scanner.rs  mod.rs  node_scanner.rs  operation_expiration.rs  scanner.rs  service.rs  shulker_loader.rs  shulker_unloader.rs
operator/src/state/: agents.rs  alerts.rs  holds.rs  inventories.rs  metrics.rs  mod.rs  operations.rs  sign_config.rs
proto/: Cargo.toml  build.rs
proto/models/: agent.proto  vec3.proto
proto/services/: agent_orchestration.proto
proto/src/: lib.rs
test/: Cargo.toml  SETUP.md
test/server/: .gitignore  server.properties  server.properties.example
test/src/: agent.rs  main.rs  operator.rs  scenario.rs  server.rs  session.rs
test/suite/: Cargo.toml
(+46 files in other folders)
