[package]
name = "sss_operator"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-cors = "0.6.0-beta.4"
actix-web = "4.0.0-beta.12"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["toml"] }
futures-util = "0.3.17"
log = "0.4.14"
pathfinding = "2.2.2"
serde = "1.0.130"
serde_json = "1.0.69"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
