[package]
name = "sss_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.0-beta.10"
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
futures-util = "0.3.21"
log = "0.4.14"
pathfinding = "3.0.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tonic = "0.7.2"
prost-types = "0.10.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
proto = { path = "../proto" }
futures = "0.3.21"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension"] }
