[package]
name = "sss_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.0-beta.10"
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
futures-util = "0.3.21"
log = "0.4.14"
pathfinding = "3.0.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
